# gaitnet

./: .gitmodules  pyproject.toml  setup.py
gaitnet/: __init__.py  __main__.py  constants.py
gaitnet/contactnet/: contactnet.py  costs.py  datagen.py  datainfo.py  manualcontrol.py  tree.py
gaitnet/eval/: eval_all.py  eval_contactnet.py  eval_gaitnet.py
gaitnet/gaitnet/: __main__.py  evaluate.py  gaitnet.py  train.py
gaitnet/gaitnet/actions/: __init__.py  footstep_action.py  mpc_action.py
gaitnet/gaitnet/components/: footstep_candidate_sampler.py  gaitnet_env.py
gaitnet/gaitnet/env_cfg/: gaitnet_env_cfg.py  observations.py  observations_utils.py  rewards.py
gaitnet/sim2real/: __init__.py  __main__.py  abstractinterface.py  siminterface.py
gaitnet/simulation/: __init__.py  __main__.py  simulation.py  util.py
gaitnet/simulation/cfg/: events.py  footstep_scanner_constants.py  quadrupedenv.py
gaitnet/util/: data_logging.py  log_exceptions.py  math.py  pga.py  timer.py  vectorpool.py
src/: constants.py
src/contactnet/: __init__.py  __main__.py  costs.py  datagen.py  debug.py  evaluate.py  manualcontrol.py  util.py
src/eval/: eval_all.py  eval_contactnet.py  eval_gaitnet.py  evaluator.py
src/eval/components/: contactnet_env.py
src/gaitnet/: evaluate.py  gaitnet.py  util.py
src/gaitnet/actions/: footstep_action.py  (+1 more)
src/sim2real/: realinterface.py
src/simulation/: util.py
src/util/: __init__.py  data_logging.py  pga.py  vectorpool.py
tests/: test_end_to_end_conversions.py  test_sim_conversions.py  test_sim_interface_conversions.py
(+11 files in other folders)
