[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "greedy-dynamic-quadruped-gait"
version = "0.1.0"
description = "Greedy Dynamic Quadruped Gait"
dependencies = [
    "torch",
    "rsl-rl @ git+https://github.com/leggedrobotics/rsl_rl.git@v1.0.2"
]

[tool.setuptools.packages.find]
where = ["src"]